Fixed search jumping to items in unloaded chunks

--- a/example/src/App.scss
+++ b/example/src/App.scss
@@ -18,3 +18,6 @@
     flex: 1 0 80vh;
 }
 
+.highlighted {
+    background-color: yellow !important;
+}
